[package]
name = "cpu-mode"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command-line client for cpu.mode"
repository = "https://github.com/s7nfo/cpu-mode-cli"

[[bin]]
name = "cpu-mode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
urlencoding = "2.1"
